# FastMssql

./: .gitignore  ARCHITECTURE.md  ASYNC_USAGE.md  Cargo.toml  DATA_TYPE_IMPROVEMENTS.md  GETTING_STARTED_DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  SETUP.md  SINGLECONNECTION_IMPLEMENTATION.md  TESTING.md  build.bat  build.sh  build_async.bat  build_async.sh  fastmssql.pyi  pyproject.toml  requirements.in  requirements.txt  sample.env  setup.py  todo.txt  unittest_setup.sh
.github/workflows/: build-wheels.yml  unittests.yml
benchmarks/: LOAD_TESTING_GUIDE.md  baseline_performance.py  load_test.py  memory_benchmark.py  profile_test.py  quick_load_test.py  simple_load_test.py  simple_memory_test.py
examples/: README.md  advanced_pool_config.py  advanced_usage.py  advanced_usage_new.py  async_only_usage.py  async_usage.py  async_usage_new.py  automatic_in_clause_demo.py  azure_auth_example.py  azure_simple_example.py  basic_usage.py  comprehensive_example.py  enhanced_api_demo.py  mixed_usage.py  parameter_usage.py  parameterized_queries.py  parameterized_queries_demo.py  paramter_expansion.py  ssl_configuration_examples.py
licenses/: NOTICE.txt
python/: __init__.py  fastmssql.py  mssql.py  mssql_python_rust.pyi
python/fastmssql/: __init__.py  __init__.pyi  fastmssql.pyi
python/fastmssql_core/: __init__.py
python/mssql_python_rust/: __init__.py  mssql.py  types.py
scripts/: mssql_docker.sh  setup.sh  unittest_setup.sh
setup_files/: azure.env.example  test_azure_simple.py
setup_files/database/: setup_database_permissions.sql
setup_files/scripts/: setup_azure_auth.sh  setup_db_permissions.sh
src/: arrow_conversion.rs  azure_auth.rs  batch.rs  connection.rs  helpers.rs  lib.rs  optimized_types.rs  parameter_conversion.rs  parameters.rs  pool_config.rs  pool_manager.rs  query.rs  single_connection.rs  ssl_config.rs  transaction.rs  type_mapping.rs  types.rs
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf
tests/: ASYNC_TESTING.md  conftest.py  test_advanced_sql.py  test_application_intent_behavior.py  test_arrow_support.py  test_async_advanced.py  test_async_edge_cases.py  test_async_stress.py  test_azure_auth_advanced.py  test_azure_authentication.py  test_azure_cli_path_validation.py  test_azure_runner.py  test_basic.py  test_batch_operations.py  test_batch_operations_advanced.py  test_batch_parameter_validation.py  test_connection.rs  test_connection_pool.py  test_context_manager_edge_cases.py  test_data_types.py  test_ddl.py  test_dml.py  test_error_handling.py  test_explicit_conn.py  test_explicit_connection_advanced.py  test_for_iteration.py  test_parameter_conversions_advanced.py  test_parameterized_queries.py  test_parameters.py  test_parameters_edge_cases.py  test_parameters_performance.py  test_performance.py  test_pool_config.py  test_pool_config_validation.py  test_prepared_statements_caching.py  test_query.rs  test_query_results_advanced.py  test_query_timeout.py  test_row_and_results.py  test_single_connection.py  (+11 more)
