[package]
name = "fastmssql_core"
version = "0.7.6"
edition = "2024"

[lib]
name = "fastmssql_core"
crate-type = ["cdylib"]

# Ultra-high performance profile with aggressive CPU optimizations
[profile.release]
opt-level = 3                # Maximum optimization
lto = "fat"                  # Full link-time optimization
codegen-units = 1            # Better optimization, slower compile
panic = "unwind"             # Smaller binary, faster code
strip = true                 # Remove debug symbols
overflow-checks = true       # Enable overflow checks for safety

# Performance-focused development profile
[profile.dev]
opt-level = 1               # Some optimization for faster dev iteration
overflow-checks = true      # Keep safety checks in dev
debug = true               # Keep debug info for development

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 2

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311", "chrono"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio", "tokio-runtime"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "process"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tiberius = { version = "0.12.3", features = ["chrono", "tds73", "rustls"], default-features = false }
bb8 = "0.9.1"

chrono = { version = "0.4.45" }
uuid = { version = "1.23.5" }
ahash = "0.8.12"              # Faster hashing algorithm (used in optimized_types.rs)
smallvec = "1.15.2"          # Stack-allocated vectors for small collections
mimalloc = { version = "0.1.52", default-features = false } # Microsoft's fast memory allocator
slab = "0.4.12"              # Pinned sub-dependency due to CVE-2025-55159
bytes = "1.12.1"             # Pinned sub-dependency due to CVE-2026-25541
quinn-proto = "0.11.16"      # Pinned sub-dependency due to CVE-2026-31812

# Azure authentication dependencies
reqwest = { version = "0.13.4", features = ["json", "form", "rustls"], default-features = false }
serde_json = "1.0.150"

zeroize = { version = "1.9.0", features = ["derive"] }


[dev-dependencies]
tempfile = "3.27.0"
